# handicraft

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/: .clang-format  CMakeLists.txt
cpp/app/: CMakeLists.txt  Dockerfile
cpp/app/src/: main.cpp
cpp/calc/: CMakeLists.txt  Dockerfile  README.md  build.sh  calc.sh  gcc-build.sh
cpp/calc/src/: evaluator.hpp  main.cpp  parser.hpp  token.hpp  token_tree.hpp  tokenizer.hpp
cpp/coin/: CMakeLists.txt
cpp/coin/cntclstr/: CMakeLists.txt  count_clusters.hpp  count_clusters_test.cpp
cpp/coin/dnmcprgrmng/: CMakeLists.txt
cpp/coin/dnmcprgrmng/bstsm/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/cncnstrct/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/cnsm/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/cntcnstrct/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/cntsm/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/fbnc/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/fibo/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/grdtrvlr/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/hwsm/: solution.hpp  test.cpp
cpp/coin/dnmcprgrmng/lcnstrct/: solution.hpp  test.cpp
cpp/coin/dtrt/: CMakeLists.txt
cpp/coin/dtrt/nxtprmfbnc/: solution.hpp  test.cpp
cpp/coin/exabeam/: CMakeLists.txt  exabeam.hpp  exabeam_test.cpp
cpp/coin/mcrsft/: CMakeLists.txt  solution.hpp  test.cpp
cpp/coin/mcrsft/cmnmngr/: solution.hpp  test.cpp
cpp/coin/mcrsft/cplfrgs/: solution.hpp  test.cpp
cpp/coin/mcrsft/qldgtsmprmxsm/: solution.hpp  test.cpp
cpp/coin/mcrsft/qstnmrkrdl/: solution.hpp  solution_test.cpp
cpp/coin/microsoft/: CMakeLists.txt  microsoft.hpp  microsoft_test.cpp
cpp/coin/mrgntrvl/: CMakeLists.txt  merge_interval.hpp  merge_interval_test.cpp
cpp/coin/mzn/: CMakeLists.txt  README.md  scene_partitioning.hpp  scene_partitioning_test.cpp
cpp/coin/mzn/cntclstrs/: solution.hpp  solution_test.cpp  test.cpp
cpp/coin/mzn/cntdcrsngrtngs/: README.md  solution.hpp  test.cpp
cpp/coin/mzn/ctflms/: solution_test.cpp  test.cpp
cpp/coin/mzn/ctfrnks/: README.md  solution.hpp  test.cpp
cpp/coin/mzn/fvstrslrs/: README.md  solution.hpp  solution_test.cpp  test.cpp
cpp/coin/mzn/ldcrg/: README.md  solution.hpp  test.cpp
cpp/coin/mzn/lngststr/: solution.hpp  test.cpp
cpp/coin/mzn/rvrcntrl/: README.md  solution.hpp  test.cpp
cpp/coin/mzn/tlztnchcks/: README.md  solution.hpp  test.cpp
cpp/coin/mzn/tmsncntrs/: README.md  solution.hpp  solution_test.cpp  test.cpp
cpp/coin/mzn/trnsctnlgs/: README.md  solution.hpp  test.cpp
cpp/coin/plndrm/: CMakeLists.txt  palindrome.hpp  palindrome_test.cpp  test_timeout.hpp
cpp/coin/prfxtbl/: CMakeLists.txt  prefix_table.hpp  prefix_table_test.cpp
cpp/coin/prfxtr/: CMakeLists.txt  prefix_tree.hpp  prefix_tree_test.cpp
cpp/coin/prstrg/: CMakeLists.txt
cpp/coin/prstrg/cltz/: solution.hpp  test.cpp
cpp/coin/prstrg/cntsqrs/: solution.hpp  test.cpp
cpp/coin/prstrg/wrkr/: solution.hpp  test.cpp
cpp/coin/sldwnd/: CMakeLists.txt  sliding_window.hpp  sliding_window_test.cpp  test.cpp
cpp/coin/sprsmtrx/: CMakeLists.txt  sparse_matrix.hpp  sparse_matrix_test.cpp
cpp/coin/tr/: CMakeLists.txt
cpp/coin/tr/bnrtr/: solution.hpp  test.cpp
cpp/coin/twoptr/: CMakeLists.txt  two_pointers.hpp  two_pointers_test.cpp
cpp/epc/: CMakeLists.txt  binary_counter.hpp  binary_counter_test.cpp  min.hpp  min_test.cpp  node_pool.hpp  node_pool_test.cpp
cpp/game/: CMakeLists.txt  main.cpp
cpp/gmtr/: CMakeLists.txt
cpp/gmtr/src/gmtr/: point.hpp  space.hpp  system.hpp  vector.hpp
cpp/gmtr/src/main/: CMakeLists.txt  main.cxx
cpp/hello/: Dockerfile  main.cpp
cpp/lark/: CMakeLists.txt  game.hpp  log.hpp  main.cpp  player.hpp  program.hpp
cpp/ntrvlmp/: CMakeLists.txt  ntrvlmp.cpp
cpp/pool/: CMakeLists.txt
cpp/pool/src/: pool.cpp
cpp/sample/: Dockerfile
cpp/sample/src/: CMakeLists.txt
cpp/sample/src/sample/: main.cpp
cpp/samples/: CMakeLists.txt
cpp/samples/produce_and_consume/: CMakeLists.txt  consumer.hpp  line.hpp  main.cpp  name.hpp  producer.hpp  product.hpp  thread.hpp
cpp/samples/shared_mutex/: CMakeLists.txt  main.cpp
cpp/samples/threading/: CMakeLists.txt
cpp/samples/threading/conditional_busy_wait/: CMakeLists.txt  main.cpp
cpp/samples/threading/countdown_latch/: CMakeLists.txt  main.cpp
cpp/samples/threading/mutex_lock/: CMakeLists.txt  main.cpp
cpp/samples/threading/mutex_spin_lock/: CMakeLists.txt  main.cpp
cpp/samples/type_erasure/: CMakeLists.txt  main.cpp
cpp/spanchart/: CMakeLists.txt  span_chart.hpp  span_chart_test.cpp  test.bat
cpp/stats/: CMakeLists.txt
cpp/stats/main/: CMakeLists.txt
cpp/stats/test/: CMakeLists.txt
cpp/toolset/: CMakeLists.txt  build.sh  cntwrd  wrdsz
cpp/toolset/src/cntln/: CMakeLists.txt  cntln.cpp
cpp/toolset/src/cntwrd/: CMakeLists.txt  cntwrd.cpp
cpp/toolset/src/include/: cntrutl.hpp  txtln.hpp
cpp/toolset/src/rvln/: CMakeLists.txt  rvln.cpp
cpp/toolset/src/rvwrd/: CMakeLists.txt  rvwrd.cpp
cpp/toolset/src/wrdsz/: CMakeLists.txt  wrdsz.cpp
csharp/hello/: Dockerfile  Program.cs
csharp/marsrover/: Command.cs  Direction.cs  Mission.cs  MissionTest.cs  Range.cs  Rover.cs
csharp/prototype/: PrototypeTest.cs  README.md  diagram.uxf  prototype.csproj
csharp/wapi/: Dockerfile  Program.cs  (+2 more)
go/: go.mod
python/: .gitignore
(+420 files in other folders)
