cmake_minimum_required(VERSION 3.0.0)

project(coin)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(cntclstr)
add_subdirectory(exabeam)
add_subdirectory(microsoft)
add_subdirectory(mrgntrvl)
add_subdirectory(plndrm)
add_subdirectory(prfxtbl)
add_subdirectory(prfxtr)
add_subdirectory(sldwnd)
add_subdirectory(sprsmtrx)
add_subdirectory(twoptr)
