cmake_minimum_required(VERSION 3.0.0)

project(coin)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(cntclstr)
add_subdirectory(dnmcprgrmng)
add_subdirectory(dtrt)
add_subdirectory(exabeam)
add_subdirectory(mcrsft)
add_subdirectory(mrgntrvl)
add_subdirectory(mzn)
add_subdirectory(plndrm)
add_subdirectory(prfxtbl)
add_subdirectory(prfxtr)
add_subdirectory(prstrg)
add_subdirectory(sldwnd)
add_subdirectory(sprsmtrx)
add_subdirectory(tr)
add_subdirectory(twoptr)
